@@ -1272,7 +1272,9 @@ module Druid
      :cells,
      :images,
      :forms,
-     :list_items].each do |method_name|
+     :list_items,
+     :unordered_lists,
+     :ordered_lists].each do |method_name|
       define_method(method_name) do |name, identifier, &block|
         define_method("#{name}_elements") do
           return call_block(&block) if block_given?
