@@ -21,6 +21,8 @@
     * images
     * forms
     * list_items
+    * unordered_lists
+    * ordered_lists
 === 2017-01-09
 * Enhancement
   * Added params class instance variable to hold hash values that can be used in the page
